<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_game">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Resume">Resume</string>
    <string name="newGame">New Game</string>
    <string name="options">Options</string>
    <string name="credits">Credits</string>
    <string name="exit">Exit</string>
    <string name="topImage">Top Image</string>
    <string name="bottomImage">Bottom Image</string>
</resources>